tdf#136904 tdf#116084 tdf#121176 sw: fix Undo & anonymized w:del in w:ins

Undo/Redo crash resulted by the workaround for anonymized
w:del in w:ins. Anonymized (no time stamp) redlines
are loaded with Epoch time (1970-01-01) since
commit 2c51746997478ad5d0e7cc64aa6489769c473d43
"tdf#146171 DOCX: fix loss of change tracking, if no date",
so it's possible to fix the original DOCX import problem
using this value: don't combine anonymized deletion
inside/over anonymized insertion, and remove all the
workaround, keeping only their adjusted unit tests,
and add new tests for the export fixed finally, which
keeps anonymized w:del in anonymized w:ins.

Revert commit 2de1fd7d8b8bd42c66190140cc4506df0c3367f1
"tdf#125187 DOCX track changes: fix w:del within w:ins",
commit df4f405a153603551f67e289bbaccf9ac39b923c
"tdf#121176 DOCX track changes: same size w:del in w:ins" and
commit 7a810d6a9fb79a24d00e5dbd8e1223e6f8b09677
"tdf#116084 DOCX track changes: fix w:del within w:ins".

Regression from commit 2de1fd7d8b8bd42c66190140cc4506df0c3367f1
"tdf#125187 DOCX track changes: fix w:del within w:ins".

See also commit 64dcedcf7c073d1819794d68a33651b14877e1b5
"tdf#147760 tdf#142902 DOCX export: anonymize date and moveFromRangeStart".

Change-Id: Id6e41187e7f94154389f24dd525067ac47ec7e58
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/148479
Tested-by: Jenkins
Reviewed-by: László Németh <nemeth@numbertext.org>